Fixed responsive layout issues. Copy updated. Tidy up.

--- a/css/main.css
+++ b/css/main.css
@@ -225,18 +225,16 @@ a {
   right: 0;
   top: 0;
 }
+div:has(.section-title-img) {
+  min-height: 157px;
+}
 #about-content-header {
   /* Hello, my name is... */
-  font-size: 18pt;
+  font-size: 28pt;
   color: #ea4549;
   line-height: 26px;
   padding-top: 5rem !important;
   font-weight: 700;
-}
-.profile-img {
-  position: absolute;
-  right: -10%;
-  top: 10%;
 }
 /* Work */
 .header-margin {
@@ -246,25 +244,19 @@ a {
   padding: 5rem 0 0 0;
   background-color: #f7f7f7;
   height: 100vh !important;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .img-portfolio {
   margin: 0 auto;
 }
 .portfolio-item:hover,
 .portfolio-item:focus {
-  /* Rectangle Copy: */
   background-color: #ea4549;
 }
 .img-portfolio:hover,
 .img-portfolio:focus {
   opacity: 0;
-}
-.portfolio-box {
-  position: relative;
-  display: block;
-  max-width: 650px;
-  min-width: 200px;
-  margin: 0 auto;
 }
 .portfolio-box .portfolio-box-caption {
   color: white;
@@ -331,10 +323,13 @@ a {
   }
 }
 .spotify-embed {
+  width: auto;
   max-height: 400px;
   min-height: 200px;
-  max-width: 400px;
-  min-width: 200px;
+}
+.swiper-slide {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 /* Footer */
 footer {
@@ -397,9 +392,7 @@ footer {
   }
 
   .bottom-align-text {
-    /* position: absolute; */
     bottom: 15%;
-    /* right: 0; */
   }
 }
 @media only screen and (min-device-width: 834px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -408,9 +401,7 @@ footer {
   }
 
   .bottom-align-text {
-    /* position: absolute; */
     bottom: 15%;
-    /* right: 0; */
   }
 }
 
@@ -714,57 +705,34 @@ input {
 /* Swiper Slides setup */
 .swiper-container {
   width: 100%;
-  height: 100%;
   margin: 2em 0 2em 0;
+}
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
-  /* width: auto; */
-  /* width: 80%; */
-  /* width: 200px; */
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
   align-items: center;
 }
 .swiper-slide img {
-  width: auto;
-  /* height: auto; */
-  max-width: 100%;
-  max-height: 100%;
+  display: block;
 }
 .swiper-pagination-bullet-active {
   background-color: #ea4549;
 }
-.swiper-container-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-custom,
-.swiper-pagination-fraction {
-  bottom: 0;
-}
-.swiper-button-next,
-.swiper-container-rtl .swiper-button-prev {
-  background-image: url("../img/icons/forward-arrow-default.png");
-}
-.swiper-button-prev,
-.swiper-container-rtl .swiper-button-next {
-  background-image: url("../img/icons/back-arrow-default.png");
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  color: #ea4549;
 }
 .pt-110 {
   padding-top: 110pt;
 }
 .footer-img {
-  /* max-width: 10%; */
   max-width: 100px;
 }
 /*---------------------------------------------*/
@@ -1250,7 +1218,6 @@ textarea.input2 + .focus-input2::after {
   .text-overflow {
     max-height: 100%;
     overflow: auto;
-    /* padding: 1rem !important; */
     padding-top: 8% !important;
   }
   #about-content-header {
@@ -1346,7 +1313,7 @@ textarea.input2 + .focus-input2::after {
     padding-right: 2rem !important;
   }
   #about-content-header {
-    padding-top: 0 !important;
+    padding-top: 5% !important;
   }
   #portfolio {
     height: 100% !important;
@@ -1394,13 +1361,8 @@ textarea.input2 + .focus-input2::after {
 }
 
 @media (min-width: 1920px) {
-  .profile-img {
-    right: -5% !important;
-  }
   #about-content-header {
     font-size: 30pt;
-    padding-top: 8.5rem !important;
-    padding-bottom: 2rem !important;
   }
   .m-bottom {
     margin-bottom: 2.5rem;
@@ -1441,8 +1403,3 @@ textarea.input2 + .focus-input2::after {
     top: 130%;
   }
 }
-
-/** Loading spinner */ /* .spinner-container { position: absolute; padding-top: 10%; left: 45%; /* transform: translate(-50%, -50%) ; */ /* } .dot { width: 28px; height: 28px; border: 2px solid #ffffff; border-radius: 50%; float: left; margin: 0 10px; transform: scale(0) ; animation: fx 1000ms ease infinite 0ms; } .dot:nth-child(2) { animation: fx 1000ms ease infinite 300ms; } .dot:nth-child(3) { animation: fx 1000ms ease infinite 600ms; } @keyframes fx { 50% { transform: scale(1) ; opacity: 1; } 100% { opacity: 0; } } */ /** Heart beat */ /* .spinner-container { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(5) ; } .spinner-container svg polyline { fill: none; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; } .spinner-container svg polyline#back { stroke: rgba(255,75,80,0.3) ; } #front { stroke: #ff4b50; stroke-dasharray: 12,
-  36; stroke-dashoffset: 48; animation: dash 1s linear infinite; } */ /* Make animations wait */ /* .loading *,
-  .loading *:before,
-  .loading *:after { animation-play-state: paused !important; } @-moz-keyframes dash { 62.5% { opacity: 0; } to { stroke-dashoffset: 0; } } @-webkit-keyframes dash { 62.5% { opacity: 0; } to { stroke-dashoffset: 0; } } @-o-keyframes dash { 62.5% { opacity: 0; } to { stroke-dashoffset: 0; } } @keyframes dash { 62.5% { opacity: 0; } to { stroke-dashoffset: 0; } } */
